# futuristic

./: Cargo.toml  README.md
src/: future.rs  lib.rs  sink.rs  stream.rs
src/sink/: fork.rs  mod.rs  null.rs
src/stream/: zip_latest.rs  zip_latest_all.rs  zip_latest_with.rs  zip_latest_with_all.rs
