[package]
name = "futuristic"
version = "0.3.0-alpha.0"
authors = ["Stephane Raux <stephaneyfx@gmail.com>"]
edition = "2018"
description = "Extensions to the futures crate"
license = "MIT"
homepage = "https://github.com/stephaneyfx/futuristic"
repository = "https://github.com/stephaneyfx/futuristic.git"
documentation = "https://docs.rs/futuristic"
keywords = ["futures", "streams", "sinks", "asynchronous"]

[dependencies]
either = "1.5.0"
futures = "0.3.1"
