[package]
name = "futuristic"
version = "0.3.0"
authors = ["Stephane Raux <stephaneyfx@gmail.com>"]
edition = "2021"
description = "Extensions to the futures crate"
license = "0BSD"
homepage = "https://github.com/stephaneyfx/futuristic"
repository = "https://github.com/stephaneyfx/futuristic.git"
documentation = "https://docs.rs/futuristic"
keywords = ["futures", "streams", "sinks", "asynchronous"]

[dependencies]
either = "1.6.1"
futures = "0.3.21"
